--- a/client/src/Components/Home/Home.css
+++ b/client/src/Components/Home/Home.css
@@ -23,20 +23,25 @@ html {
   float: left;
   height: 265px;
   width: 980px;
-  margin-top: 70px;
-  margin-left: 12%;
+  margin-top: 75px;
+  margin-left: 14.5%;
   box-shadow: 5px 5px 5px 5px black;
   background: linear-gradient(to right, #004059, #6441A4);
 }
 
 #mainbox {
   border: 3px inset black;
+  width: 90%;
+}
+
+#mario{
+  margin-left: -26px;
 }
 
 
 #games {
   z-index: 1;
-  margin-left: -8px;
+  margin-left: -7px;
 }
 
 #inputbox {
@@ -50,6 +55,12 @@ html {
   color: #6441A4;
   margin-top: 20px;
   font-family: "Bungee Shade";
+}
+
+#buttonsdiv{
+  position: relative;
+  right: -470px;
+  top: -245px;
 }
 
 #teachersignup {
@@ -71,8 +82,8 @@ html {
   text-shadow: 1px 1px 1px #D20014;
   color: black;
   position: absolute;
-  margin-left: 215px;
-  font-size: 40px;
+  margin-left: 190px;
+  font-size: 38px;
 }
 
 #betheteacher {
@@ -80,9 +91,9 @@ html {
   text-shadow: 1px 1px 1px #D20014;
   color: black;
   position: absolute;
-  margin-left: 190px;
+  margin-left: 163px;
   margin-top: 48px;
-  font-size: 39px;
+  font-size: 38px;
   display: inline-block;
 }
 
@@ -132,4 +143,8 @@ html {
   margin-left: -25px;
   transform: rotate(-1deg);
   position: absolute;
+}
+
+#search{
+  margin-top: -50px;
 }
