--- a/client/src/Components/Home/Home.css
+++ b/client/src/Components/Home/Home.css
@@ -1,119 +1,124 @@
 html {
-  background-color: #004059;
+    background-color: #004059;
 }
 
 #home {
-  background-image: url("./controller.jpg");
-  height: 800px;
-  width: auto;
-  background-position: 2240px 1505px;
+    z-index: 0;
+    background-image: url("./controller.jpg");
+    height: 800px;
+    width: auto;
+    background-position: 2240px 1505px;
+}
+
+#pixel {
+    z-index: 5;
 }
 
 #mainhead {
-  margin-top: 40px;
-  margin-left: 16%;
-  font-family: "Bungee Shade";
-  font-size: 70px;
-  color: #6441A4;
-  text-shadow: 2px 1px black;
+    margin-top: 40px;
+    margin-left: 15.2%;
+    font-family: "Bungee Shade";
+    font-size: 70px;
+    color: white;
+    text-shadow: 2px 1px black;
 }
 
 #wrapper {
-  border: linear-gradient(to right, rgba(255, 0, 0, 0), #004059(0, 255, 255));
-  float: left;
-  height: 265px;
-  width: 980px;
-  margin-top: 75px;
-  margin-left: 14.5%;
-  box-shadow: 5px 5px 5px 5px black;
-  background: linear-gradient(to right, #004059, #6441A4);
+    border: linear-gradient(to right, rgba(255, 0, 0, 0), #004059(0, 255, 255));
+    float: left;
+    height: 265px;
+    width: 980px;
+    margin-top: 75px;
+    margin-left: 14.5%;
+    box-shadow: 5px 5px 5px 5px black;
+    background: linear-gradient(to right, #004059, #6441A4);
 }
 
 #mainbox {
-  border: 3px inset black;
-  width: 90%;
+    border: 3px inset black;
+    width: 90%;
 }
 
-#mario{
-  margin-left: -26px;
+#mario {
+    margin-left: -26px;
 }
-
 
 #games {
-  z-index: 1;
-  margin-left: -7px;
+    z-index: 1;
+    margin-left: -7px;
 }
 
 #inputbox {
-  position: absolute;
-  margin-top: -91px;
-  margin-left: 20px;
-  z-index: 0;
+    position: absolute;
+    margin-top: -91px;
+    margin-left: 20px;
+    z-index: 0;
 }
 
 #searchtext {
-  color: #6441A4;
-  margin-top: 20px;
-  font-family: "Bungee Shade";
+    color: #6441A4;
+    margin-top: 20px;
+    font-family: "Bungee Shade";
 }
 
-#buttonsdiv{
-  position: relative;
-  right: -470px;
-  top: -245px;
+#buttonsdiv {
+    position: relative;
+    right: -470px;
+    top: -245px;
 }
 
 #teachersignup {
-  border: 1px solid #6441A4;
-  background-color: #1E2D26;
-  margin-top: 190px;
-  margin-left: -250px;
+    border: 1px solid #6441A4;
+    background-color: #1E2D26;
+    margin-top: 190px;
+    margin-left: -250px;
 }
 
 #teacherlogin {
-  border: 1px solid #6441A4;
-  background-color: #1E2D26;
-  margin-top: 190px;
-  margin-left: 40px;
+    border: 1px solid #6441A4;
+    background-color: #1E2D26;
+    margin-top: 190px;
+    margin-left: 40px;
 }
 
 #bethe {
-  font-family: "Press Start 2P";
-  text-shadow: 1px 1px 1px #D20014;
-  color: black;
-  position: absolute;
-  margin-left: 190px;
-  font-size: 38px;
+    font-family: "Press Start 2P";
+    text-shadow: 1px 1px 1px #D20014;
+    color: black;
+    position: absolute;
+    margin-top: 80px;
+    margin-left: 192px;
+    font-size: 38px;
 }
 
 #betheteacher {
-  font-family: "Press Start 2P";
-  text-shadow: 1px 1px 1px #D20014;
-  color: black;
-  position: absolute;
-  margin-left: 163px;
-  margin-top: 48px;
-  font-size: 38px;
-  display: inline-block;
+    font-family: "Press Start 2P";
+    text-shadow: 1px 1px 1px #D20014;
+    color: black;
+    position: absolute;
+    margin-left: 167px;
+    margin-top: 128px;
+    font-size: 38px;
+    display: inline-block;
 }
 
 #betheg {
-  font-family: "Press Start 2P";
-  font-size: 39px;
-  text-shadow: 1px 1px 0 #FCDBC4;
-  color: black;
-  margin-top: 3px;
-  margin-left: 20px;
-  position: absolute;
+    font-family: "Press Start 2P";
+    font-size: 37px;
+    text-shadow: 1px 1px 0 #FCDBC4;
+    color: black;
+    margin-top: 83px;
+    margin-left: 20px;
+    position: absolute;
 }
 
 #bethegamer {
-  font-family: "Press Start 2P";
-  text-shadow: 1px 1px 0 #FCDBC4;
-  color: black;
-  position: absolute;
-  margin-top: 48px;
-  margin-left: 20px;
+    font-family: "Press Start 2P";
+    text-shadow: 1px 1px 0 #FCDBC4;
+    color: black;
+    position: absolute;
+    margin-top: 129px;
+    margin-left: 28px;
 }
 
 /* .card {
@@ -125,26 +130,32 @@ html {
 } */
 
 #teachertext {
-  font-family: "Bungee Shade";
-  font-size: 17px;
+    font-family: "Bungee Shade";
+    font-size: 17px;
 }
 
 #gamertext {
-  font-family: "Bungee Shade";
-  font-size: 17px;
+    font-family: "Bungee Shade";
+    font-size: 17px;
 }
 
 #container {
-  background-color: #004059;
+    background-color: #004059;
 }
 
 #mainlogo {
-  margin-top: -140px;
-  margin-left: -25px;
-  transform: rotate(-1deg);
-  position: absolute;
+    margin-top: -140px;
+    margin-left: -25px;
+    transform: rotate(-1deg);
+    position: absolute;
 }
 
-#search{
-  margin-top: -50px;
+#search {
+    margin-top: -50px;
+}
+
+#twitchlogo {
+    position: absolute;
+    margin-top: -129px;
+    margin-left: 1229px;
 }
