--- a/client/src/Components/Faves/Faves.css
+++ b/client/src/Components/Faves/Faves.css
@@ -1,7 +1,8 @@
 #Faves {
   font-family: "Tajawal";
-  background-color: #004059;
+  background-color: rgba(0, 64, 89, .9);;
   border-radius: 15px;
   border: 3px solid #5dc21e;
   color: #5dc21e;
+  margin-bottom: 50px;
 }
