--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,3 +3,44 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+
+
+form {
+  border: 3px solid #ccc;
+  padding: 0 20px 25px 20px;
+  border-radius: 10px;
+  font-family:"Press Start 2P";
+  font-size: 20px;
+}
+
+form h4 {
+  color: #5dc21e;
+}
+
+label,
+form.form-label {
+  font-size: 25px !important;
+}
+input[type=checkbox],
+input[type=radio] {
+  margin-right: 8px;
+}
+
+.form-label.capitalize {
+  text-transform: capitalize;
+}
+
+.checkbox-group {
+  display: flex;
+  justify-content: space-between;
+
+}
+
+.checkbox-group .form-label {
+  width: 50%;
+}
+
+input[type=submit],
+.btn-link {
+  margin-top: 20px;
+}
