--- a/client/src/Components/GamerForm/GamerForm.css
+++ b/client/src/Components/GamerForm/GamerForm.css
@@ -40,3 +40,15 @@ input[type=text] {
   left:50%;
   transform: translate(-50%, -50%)
 }
+
+.rate-schedule {
+  position: absolute;
+  top: 75%;
+  left: 50%;
+  display: flex;
+  
+}
+
+.rate-schedule .form-label {
+  width: 16%;
+}
