--- a/client/src/Components/SearchBar/Search.css
+++ b/client/src/Components/SearchBar/Search.css
@@ -38,7 +38,7 @@ body {
     font-size: 10px;
 }
 
-.btn {
+#playbtn {
     box-shadow: 1px 1px 1px 1px black;
     position: absolute;
     font-size: 6px;
@@ -48,7 +48,11 @@ body {
     margin-top: 75px;
 }
 
-.input-field.col.s6 {
+#gamepagesearch .input-field.col.s6 {
+    position: relative;
+    margin-left:300px;
+}
+#inputbox .input-field.col.s6 {
     position: relative;
     margin-top: 130px;
     margin-left: 50px;
