--- a/client/src/Components/GuruRating/GuruRating.css
+++ b/client/src/Components/GuruRating/GuruRating.css
@@ -1,4 +1,11 @@
 .stars-container {
   margin-top: -5px;
   margin-left: 5px;
+  border-radius: 10px;
+}
+
+.fillSquare,
+.fillInitialBG,
+.divStar {
+  border-radius: 50% !important;
 }
