--- a/client/src/Components/CheckboxOrRadioGroup/CheckboxOrRadioGroup.css
+++ b/client/src/Components/CheckboxOrRadioGroup/CheckboxOrRadioGroup.css
@@ -1,3 +1,13 @@
 .checkbox-group label:hover {
   background-color: #6441a4 !important;
 }
+
+[type="checkbox"] {
+  opacity: 1 !important;
+  margin-top: -30px;
+  background-color:#6441a4
+}
+
+.label-span {
+  margin-left: 5px;
+}
