--- a/client/src/Components/Faves/Faves.css
+++ b/client/src/Components/Faves/Faves.css
@@ -1,6 +1,6 @@
 #Faves {
   font-family: "Tajawal";
-  background-color: rgba(0, 64, 89, .9);;
+  background-color: rgba(0,0,0, .7);;
   border-radius: 15px;
   border: 3px solid #5dc21e;
   color: #5dc21e;
