--- a/client/src/Components/Home/Home.css
+++ b/client/src/Components/Home/Home.css
@@ -10,11 +10,10 @@ hr {
     margin-top: -100px;
 }
 
-
 #home {
     z-index: 0;
     background-image: url("./mixed.jpg");
-    height: 830px;
+    height: 990px;
     position: relative;
 }
 
@@ -70,7 +69,7 @@ hr {
 #inputbox {
     position: absolute;
     margin-top: -91px;
-    margin-left: 10px;
+    margin-left: -10px;
     z-index: 0;
 }
 
@@ -126,7 +125,6 @@ hr {
     margin-left: 28px;
 }
 
-
 #teachertext {
     font-family: "Bungee Shade";
     font-size: 17px;
@@ -141,11 +139,9 @@ hr {
     background-color: #004059;
 }
 
-
 #search {
     margin-top: -50px;
 }
-
 
 #twitchbadge {
     position: absolute;
@@ -155,6 +151,16 @@ hr {
 
 #thecontroller {
     position: absolute;
-    margin-left: 350px;
-    margin-top: 400px;
+    margin-left: 160px;
+    margin-top: 370px;
+}
+
+#searchyourstream {
+    position: absolute;
+    font-family: "Bungee Shade";
+    font-size: 20px;
+    margin-top: 323px;
+    margin-left: 375px;
+    color: #6441A4;
+    z-index: 1;
 }
