--- a/client/src/Components/SearchBar/Search.css
+++ b/client/src/Components/SearchBar/Search.css
@@ -1,5 +1,4 @@
 @import url(https://fonts.googleapis.com/css?family=Open+Sans);
-
 body {
     background: #f2f2f2;
     font-family: 'Open Sans', sans-serif;
@@ -25,6 +24,10 @@ body {
     color: #00B4CC;
 }
 
+.material-icons {
+    margin-left: -20px;
+}
+
 .searchButton {
     position: absolute;
     right: -50px;
@@ -36,22 +39,22 @@ body {
     color: #fff;
     border-radius: 5px;
     cursor: pointer;
-    font-size: 10px;
+    font-size: 30px;
 }
 
 #playbtn {
     box-shadow: 1px 1px 1px 1px black;
     position: absolute;
-    font-size: 6px;
-    width: 50px;
-    height: 40px;
-    margin-left: -97px;
-    margin-top: 75px;
+    font-size: 15px;
+    width: 80px;
+    height: 60px;
+    margin-left: -320px;
+    margin-top: 205px;
 }
 
 #gamepagesearch .input-field.col.s6 {
     position: relative;
-    margin-left:300px;
+    margin-left: 300px;
 }
 
 #inputbox .input-field.col.s6 {
@@ -61,10 +64,15 @@ body {
 }
 
 #autocomplete-input {
-    width: 122px;
-    position: relative;
-    margin-top: 110px;
-    margin-left: -144px;
+    width: 340px;
+    height: 100px;
+    padding-top: -100px;
+    position: absolute;
+    margin-top: 190px;
+    margin-left: 100px;
+    background-color: rgba(0, 0, 0, 0.5);
+    box-shadow: 2px 2px 2px 2px black;
+    z-index: 0;
 }
 
 /*Resize the wrap to see the search bar change!*/
