--- a/client/src/Components/Home/Home.css
+++ b/client/src/Components/Home/Home.css
@@ -2,6 +2,15 @@ html {
     background-color: #000000;
 }
 
+#qsLoginBtn,
+#qsLogoutBtn {
+    background-color: #6441A4;
+    border: 1px solid #6441A4;
+    position: absolute;
+    top:15%;
+    left:12%;
+}
+
 hr {
     height: 1px;
     border: 0;
