--- a/client/src/Components/Home/Home.css
+++ b/client/src/Components/Home/Home.css
@@ -7,8 +7,8 @@ html {
     background-color: #6441A4;
     border: 1px solid #6441A4;
     position: absolute;
-    top:15%;
-    left:12%;
+    top:14.3%;
+    left:13.8%;
 }
 
 hr {
@@ -128,10 +128,11 @@ hr {
 #bethegamer {
     font-family: "Press Start 2P";
     text-shadow: 1px 1px 0 #FCDBC4;
+    font-size: 40px;
     color: black;
     position: absolute;
     margin-top: 129px;
-    margin-left: 28px;
+    margin-left: 25px;
 }
 
 #teachertext {
@@ -172,4 +173,8 @@ hr {
     margin-left: 375px;
     color: #6441A4;
     z-index: 1;
+}
+
+#autocomplete-input {
+    font-size: 25px !important;
 }
